Tooltip in backgrounds boxes + align cancel and apply buttons margins + fix drag and drop + fix delete custom image button + hide devicesOptions when clicking background effects

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -74,6 +74,7 @@
   border: 1px solid #e0e0e0;
   border-radius: 12px;
   padding: 0.5rem;
+  margin: 0.5rem;
   padding-bottom: 0.5rem;
   background-color: #f0f4f9;
 }
